--- a/GitLab-Main/.gitlab-ci.yml
+++ b/GitLab-Main/.gitlab-ci.yml
@@ -9,7 +9,6 @@ variables:
   PROD_CF_DISTRIBUTION_ID: "E3AA1LSGY83MJZ"  # Define CloudFront ID
 
 
-
 # Tests for the dev branch
 test-html:
   stage: test
@@ -39,37 +38,14 @@ test-js:
     - eslint "public/js/**/*.js" --config eslint.config.js
 
 
-deploy_main:
-  stage: deploy
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "main"'
-  image:
-    name: amazon/aws-cli
-    entrypoint: [""]
-  script:
-    # Export varivables
-    - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
-    - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
-    - export AWS_REGION=$AWS_REGION
-    # Verify AWS CLI version
-    - echo "Verify AWS CLI version:"
-    - aws --version
-    # Configure AWS CLI
-    - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-    - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-    - aws configure set region $AWS_REGION
-    # Sync data
-    - if [ "$CI_COMMIT_BRANCH" == "main" ]; then BUCKET=$PROD_BUCKET; fi
-    - aws s3 sync public/ s3://$BUCKET --delete
-    # Invalidate CloudFront Cache
-    - if [ "$CI_COMMIT_BRANCH" == "main" ]; then CF_DISTRIBUTION=$PROD_CF_DISTRIBUTION_ID; fi
-    - aws cloudfront create-invalidation --distribution-id $CF_DISTRIBUTION --paths "/*"
-
-
 deploy_dev:
   stage: deploy
   rules:
     - if: '$CI_COMMIT_BRANCH == "dev"'
+  needs: # Run this job only if the 'test' jobs succeed
+  - job: test-html
+  - job: test-css
+  - job: test-js
   image:
     name: amazon/aws-cli
     entrypoint: [""]
@@ -90,4 +66,31 @@ deploy_dev:
     - aws s3 sync public/ s3://$BUCKET --delete
     # Invalidate CloudFront Cache
     - if [ "$CI_COMMIT_BRANCH" == "dev" ]; then CF_DISTRIBUTION=$DEV_CF_DISTRIBUTION_ID; fi
+    - aws cloudfront create-invalidation --distribution-id $CF_DISTRIBUTION --paths "/*"
+
+
+deploy_prod:
+  stage: deploy
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "prod"'
+  image:
+    name: amazon/aws-cli
+    entrypoint: [""]
+  script:
+    # Export varivables
+    - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+    - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+    - export AWS_REGION=$AWS_REGION
+    # Verify AWS CLI version
+    - echo "Verify AWS CLI version:"
+    - aws --version
+    # Configure AWS CLI
+    - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+    - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+    - aws configure set region $AWS_REGION
+    # Sync data
+    - if [ "$CI_COMMIT_BRANCH" == "prod" ]; then BUCKET=$PROD_BUCKET; fi
+    - aws s3 sync public/ s3://$BUCKET --delete
+    # Invalidate CloudFront Cache
+    - if [ "$CI_COMMIT_BRANCH" == "prod" ]; then CF_DISTRIBUTION=$PROD_CF_DISTRIBUTION_ID; fi
     - aws cloudfront create-invalidation --distribution-id $CF_DISTRIBUTION --paths "/*"
